# CppPlugin

./: CMakeLists.txt  README.md
include/GCPP/: garbagecollector.h  gcobject.h  gcpp_global.h  ifinalize.h
src/: CMakeLists.txt  garbagecollector.cpp  gcobject.cpp
tests/: CMakeLists.txt  testlib.cpp  testlib.cpp.autosave
